desktop-shell: Raise new windows over fullscreen apps

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=74219